3822B1PE4/5_block_gemm_omp/kovalchuk_alexander/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/5_block_gemm_omp/kovalchuk_alexander/block_gemm_omp.cpp: In function ‘std::vector<float> BlockGemmOMP(const std::vector<float>&, const std::vector<float>&, int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/5_block_gemm_omp/kovalchuk_alexander/block_gemm_omp.cpp:44:25: error: expected iteration declaration or initialization
   44 |                         for (; k < limit; k += 4) {
      |                         ^~~
